# ibm-wmla-python-sdk

./: .gitignore  README copy.md  README.md  pyproject.toml  requirements.txt  setup.py  wmla-openapi.json  wmla-swagger.json
ibm_wmla/: __init__.py  common.py  edi_authentication.py  edi_token.py  liberty_rest_ap_is_v1.py  version.py  wmla_api_edi_v2.py  wmla_api_v1.py
ibm_wmla/authentication/: edi_authentication.py  edi_token.py
test/unit/: test_power_cloud_api_v1.py
